# texrender-rs

./: Cargo.toml  README.md
src/: lib.rs  tex_escape.rs  tpl.rs
src/tpl/: elements.rs  macros.rs
