[package]
name = "texrender"
version = "0.1.0"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Thin wrapper around running `latexmk` to render LaTeX documents"
readme = "README.md"

[dependencies]
tempdir = "0.3.7"
thiserror = "1.0.21"
