[package]
name = "texrender"
version = "0.3.1"
authors = ["Marc Brinkmann <git@marcbrinkmann.de>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Thin wrapper around running `latexmk` to render LaTeX documents. Also supports generating Tex documents."
readme = "README.md"
documentation = "https://docs.rs/texrender"
repository = "https://github.com/mbr/texrender-rs"

[dependencies]
tempdir = "0.3.7"
thiserror = "1.0.21"
